--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "local": "next dev -p 4000",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
     "next": "10.0.5",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "slate": "^0.59.0",
+    "slate-react": "^0.59.0"
   }
 }
