--- a/package.json
+++ b/package.json
@@ -9,12 +9,23 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.4.0",
+    "@emotion/css": "^11.1.3",
+    "ali-oss": "^6.13.2",
     "antd": "^4.11.1",
+    "escape-html": "^1.0.3",
     "next": "10.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "slate": "^0.59.0",
+    "slate-html-serializer": "^0.8.13",
     "slate-react": "^0.59.0",
     "umi-request": "^1.3.5"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.22",
+    "@types/react": "^17.0.0",
+    "react-types": "^0.1.0",
+    "typescript": "^4.1.3"
   }
 }
