--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "slate": "^0.59.0",
+    "slate-history": "^0.59.0",
     "slate-html-serializer": "^0.8.13",
     "slate-react": "^0.59.0",
     "umi-request": "^1.3.5"
