--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/css": "^11.1.3",
     "ali-oss": "^6.13.2",
     "antd": "^4.11.1",
+    "bizcharts": "^4.1.9",
     "escape-html": "^1.0.3",
     "next": "10.0.5",
     "react": "17.0.1",
